--- a/index.html
+++ b/index.html
@@ -1,55 +1,68 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curso Pré-Vestibular</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <title>EduCastelo - Pré-Vestibular e Reforço Escolar</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Curso Pré-Vestibular</h1>
-        <nav>
-            <ul>
-                <li><a href="#sobre">Sobre Nós</a></li>
-                <li><a href="#calendario">Calendário</a></li>
-                <li><a href="#inscricao">Inscrição</a></li>
-                <li><a href="#contato">Contato</a></li>
-            </ul>
-        </nav>
-    </header>
+  <header>
+    <div class="logo">
+      <img src="logo.png" alt="EduCastelo Logo">
+    </div>
+    <nav>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#contato">Contato</a></li>
+        <li><a href="#materiais">Materiais Gratuitos</a></li>
+        <li><a href="#livro">Livro</a></li>
+        <li><a href="#aulas">Aulas</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <section id="sobre">
-        <h2>Sobre Nós</h2>
-        <p>Bem-vindo ao nosso curso pré-vestibular! Nossa missão é preparar você para o ENEM com aulas intensivas de Física e Matemática.</p>
-    </section>
+  <section id="home">
+    <h1>Bem-vindo ao EduCastelo</h1>
+    <p>Seu curso pré-vestibular, pré-ENEM, reforço escolar em Física e Matemática, e matérias de engenharia em Castelo-ES.</p>
+    <p>Aprenda de forma eficiente e conquiste seus objetivos acadêmicos.</p>
+  </section>
 
-    <section id="calendario">
-        <h2>Calendário de Aulas</h2>
-        <p>Confira nosso calendário completo para não perder nenhuma aula.</p>
-    </section>
+  <section id="contato">
+    <h2>Entre em Contato</h2>
+    <form>
+      <label for="nome">Nome:</label>
+      <input type="text" id="nome" name="nome" required>
 
-    <section id="inscricao">
-        <h2>Inscrição</h2>
-        <form id="inscricao-form">
-            <label for="nome">Nome:</label>
-            <input type="text" id="nome" name="nome" required>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-            <button type="submit">Inscrever-se</button>
-        </form>
-    </section>
+      <label for="email">E-mail:</label>
+      <input type="email" id="email" name="email" required>
 
-    <section id="contato">
-        <h2>Contato</h2>
-        <p>Entre em contato conosco pelo email: curso@exemplo.com</p>
-    </section>
+      <label for="mensagem">Mensagem:</label>
+      <textarea id="mensagem" name="mensagem" required></textarea>
 
-    <footer>
-        <p>&copy; 2024 Curso Pré-Vestibular. Todos os direitos reservados.</p>
-    </footer>
+      <input type="submit" value="Enviar">
+    </form>
+  </section>
 
-    <script src="scripts.js"></script>
+  <section id="materiais">
+    <h2>Materiais Gratuitos</h2>
+    <p>Aqui você encontrará materiais gratuitos para auxiliar seus estudos.</p>
+    <!-- Adicione os materiais gratuitos aqui -->
+  </section>
+
+  <section id="livro">
+    <h2>Meu Livro</h2>
+    <p>Confira meu livro sobre o assunto:</p>
+    <a href="link_do_livro" target="_blank">Compre agora</a>
+  </section>
+
+  <section id="aulas">
+    <h2>Aulas</h2>
+    <p>Confira nossas aulas disponíveis:</p>
+    <!-- Adicione as informações das aulas aqui -->
+  </section>
+
+  <footer>
+    <p>&copy; 2022 EduCastelo. Todos os direitos reservados.</p>
+  </footer>
 </body>
 </html>
