--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <title>EduCastelo - Pré-Vestibular e Reforço Escolar</title>
   <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Nome+da+Fonte&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
 </head>
 <body>
   <header>
@@ -61,8 +64,47 @@
     <!-- Adicione as informações das aulas aqui -->
   </section>
 
+  <section id="fotos">
+    <h2>Fotos do EduCastelo</h2>
+    <div class="owl-carousel">
+      <div class="item">
+        <img src="foto1.jpg" alt="Foto 1">
+      </div>
+      <div class="item">
+        <img src="foto2.jpg" alt="Foto 2">
+      </div>
+      <div class="item">
+        <img src="foto3.jpg" alt="Foto 3">
+      </div>
+    </div>
+  </section>
+
   <footer>
     <p>&copy; 2022 EduCastelo. Todos os direitos reservados.</p>
   </footer>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+  <script>
+    $(document).ready(function(){
+      $(".owl-carousel").owlCarousel({
+        loop: true,
+        margin: 10,
+        nav: true,
+        dots: false,
+        responsive: {
+          0: {
+            items: 1
+          },
+          600: {
+            items: 3
+          },
+          1000: {
+            items: 5
+          }
+        }
+      });
+    });
+  </script>
 </body>
 </html>
