--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>EduCastelo - Pré-Vestibular e Reforço Escolar</title>
   <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css2?family=Nome+da+Fonte&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
 </head>
@@ -49,7 +49,11 @@
   <section id="materiais">
     <h2>Materiais Gratuitos</h2>
     <p>Aqui você encontrará materiais gratuitos para auxiliar seus estudos.</p>
-    <!-- Adicione os materiais gratuitos aqui -->
+    <ul>
+      <li>Material 1</li>
+      <li>Material 2</li>
+      <li>Material 3</li>
+    </ul>
   </section>
 
   <section id="livro">
@@ -61,7 +65,11 @@
   <section id="aulas">
     <h2>Aulas</h2>
     <p>Confira nossas aulas disponíveis:</p>
-    <!-- Adicione as informações das aulas aqui -->
+    <ul>
+      <li>Aula 1</li>
+      <li>Aula 2</li>
+      <li>Aula 3</li>
+    </ul>
   </section>
 
   <section id="fotos">
@@ -99,12 +107,3 @@
           600: {
             items: 3
           },
-          1000: {
-            items: 5
-          }
-        }
-      });
-    });
-  </script>
-</body>
-</html>
